# monom

./: .gitignore  pyproject.toml  setup.py
monom/: __init__.py  fields.py  model.py  py.typed
tests/: test_model.py
